# es_fake

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
src/: main.rs
src/api/: auth.rs  handlers.rs  logging.rs  mod.rs  responses.rs
src/api/handlers/: cluster.rs  documents.rs  indices.rs  mod.rs  search.rs
src/domain/: engine.rs  mapping.rs  mod.rs  query.rs
src/repository/: store.rs
